# TurbinePB_Q425_Bijoy99roy

./: README.md
builder-board-adv-task-1/: Anchor.toml  README.md  UserStory.md  package-lock.json  package.json
builder-board-adv-task-1/app/backend/: .env.example  README.md  package-lock.json  package.json
builder-board-adv-task-1/app/backend/src/: index.ts
builder-board-adv-task-1/app/frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
builder-board-adv-task-1/app/frontend/src/: App.tsx  index.css  main.tsx
builder-board-adv-task-1/app/frontend/src/anchorUtils/: handlePda.ts  projects.ts
builder-board-adv-task-1/app/frontend/src/api/: constants.ts
builder-board-adv-task-1/app/frontend/src/components/: ConnectWalletNotice.tsx  Hero.tsx  Loader.tsx  Navbar.tsx  ProjectForm.tsx  WalletProvider.tsx
builder-board-adv-task-1/app/frontend/src/pages/: Home.tsx  Leaderboard.tsx
builder-board-adv-task-1/programs/builder-board-adv-task-1/: Cargo.toml
builder-board-adv-task-1/programs/builder-board-adv-task-1/src/: errors.rs  lib.rs  states.rs
builder-board-adv-task-1/programs/builder-board-adv-task-1/src/instructions/: initialize_project.rs  mod.rs  upvote_project.rs
builder-board-adv-task-1/tests/: builder-board-adv-task-1.ts
counter/: Anchor.toml  README.md
counter/programs/counter/src/: lib.rs
counter/tests/: counter.ts
hello-solana/: Anchor.toml  README.md
hello-solana/programs/hello-solana/src/: lib.rs
hello-solana/tests/: hello-solana.ts
(+4 files in other folders)
